--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,18 @@
-# Done to increase the memory available to Gradle.
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=true
-# Mod properties
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
+# Fabric Properties
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.2
+kotlin_loader_version=1.13.7+kotlin.2.2.21
+# Mod Properties
 mod_version=1.0
 maven_group=com.bleudev
-archives_name=ppl_utils
-enabled_platforms=fabric,neoforge
-# Minecraft properties
-minecraft_version=1.21.9
+archives_base_name=ppl_utils
 # Dependencies
-architectury_api_version=18.0.5
-fabric_loader_version=0.17.3
-fabric_api_version=0.134.0+1.21.9
-neoforge_version=21.9.16-beta
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.136.0+1.21.10
+midnightLib_version=1.8.3+1.21.9-fabric
+# Dev
+modMenu_version=16.0.0-rc.1
