--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@ org.gradle.jvmargs=-Xmx1G
 maven_group=com.bleudev
 archives_base_name=ppl_utils
 
-general_version=2.2_SNAPSHOT
-beta_mode=true
+general_version=2.2
+beta_mode=false
